# kouhai-js

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  GEMINI.md  PLAN.md  PLOT.md  README.md  dialogue-ratio.js  index.html  mkdocs.yml  novels.txt  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: deploy.yml
docs/: index.md
docs/volume1/: chapter01.md  chapter01_old.md  chapter02.md  chapter03.md  chapter04.md  chapter05.md  chapter06.md  chapter07.md  chapter08.md  chapter09.md  chapter10.md  chapter11.md  chapter12.md  chapter13.md  chapter14.md  chapter15.md  chapter16.md  chapter17.md  chapter18.md  chapter19.md  chapter20.md  chapter21.md  chapter22.md  chapter23.md  chapter24.md  chapter25.md  chapter26.md  chapter27.md  chapter28.md  chapter29.md  chapter30.md  chapter31.md  chapter32.md  chapter33.md  chapter34.md  chapter35.md  chapter36.md  chapter37.md  chapter38.md  chapter39.md  (+12 more)
docs/volume2/: chapter11.md  chapter12.md  chapter13.md  chapter14.md  chapter15.md  chapter16.md  chapter17.md  chapter18.md  chapter19.md  chapter20.md  chapter38.md  chapter39.md  chapter40.md  chapter41.md  chapter42.md  chapter43.md  chapter44.md  chapter45.md  chapter46.md  chapter47.md  chapter48.md  chapter49.md  chapter50.md  index.md
search/: search_index.json
volume1/: index.html
volume1/chapter01/: index.html
volume1/chapter01_old/: index.html
volume1/chapter02/: index.html
volume1/chapter03/: index.html
volume1/chapter04/: index.html
volume1/chapter05/: index.html
volume1/chapter06/: index.html
volume1/chapter07/: index.html
volume1/chapter08/: index.html
volume1/chapter09/: index.html
volume1/chapter10/: index.html
volume1/chapter11/: index.html
volume1/chapter12/: index.html
volume1/chapter13/: index.html
volume1/chapter14/: index.html
volume1/chapter15/: index.html
volume1/chapter16/: index.html
volume1/chapter17/: index.html
volume1/chapter18/: index.html
volume1/chapter19/: index.html
volume1/chapter20/: index.html
volume1/chapter21/: index.html
volume1/chapter22/: index.html
volume1/chapter23/: index.html
volume1/chapter24/: index.html
volume1/chapter25/: index.html
volume1/chapter26/: index.html
volume1/chapter27/: index.html
volume1/chapter28/: index.html
volume1/chapter29/: index.html
volume1/chapter30/: index.html
volume1/chapter31/: index.html
volume1/chapter32/: index.html
volume1/chapter33/: index.html
volume1/chapter34/: index.html
volume1/chapter35/: index.html
volume1/chapter36/: index.html
volume1/chapter37/: index.html
volume1/chapter38/: index.html
volume1/chapter39/: index.html
volume1/chapter40/: index.html
volume1/chapter41/: index.html
volume1/chapter42/: index.html
volume1/chapter43/: index.html
volume1/chapter44/: index.html
volume1/chapter45/: index.html
volume1/chapter46/: index.html
(+17 files in other folders)
